# TG_scheduler

./: .gitignore  README.md  docker-compose.yml  example.env
scheduler_backend/: Dockerfile  celery_run.py  manage.py  pyproject.toml
scheduler_backend/backend/: asgi.py  celery.py  docs_schema.py  funs.py  mixins.py  permissions.py  responses.py  settings.py  urls.py  wsgi.py
scheduler_backend/memos/: docs_schema.py  models.py  serializers.py  urls.py  views.py
scheduler_backend/memos/migrations/: 0001_initial.py
scheduler_backend/memos/tasks/: send_task.py
scheduler_backend/memos/tests/: factories.py  test_memo.py
scheduler_backend/memos/tg_service_communications/: templates.py  utils.py
scheduler_backend/memos/workers/: memos_send_worker.py
scheduler_backend/tests/: factories.py  test_memo.py  test_user.py
scheduler_backend/users/: docs_schema.py  middleware.py  models.py  serializers.py  urls.py  views.py
scheduler_backend/users/migrations/: 0001_initial.py
scheduler_backend/users/tests/: factories.py  test_user.py  utils.py
scheduler_frontend/: Dockerfile
scheduler_frontend/nginx/: nginx.conf
scheduler_frontend/tg-scheduler/: README.md  example.env  package-lock.json  package.json  (+1 more)
telegram_service/sender/: Dockerfile  pyproject.toml
telegram_service/sender/app/: main.py
telegram_service/sender/app/api/: router.py
telegram_service/sender/app/api/endpoints/: routes.py
telegram_service/sender/app/config/: settings.py
telegram_service/sender/app/schemas/: __init__.py
telegram_service/sender/app/services/: __init__.py  message.py
(+24 files in other folders)
