[tool.poetry]
name = "telegram-service"
version = "0.1.0"
description = "tg_bot_service"
authors = ["mssffct <herooftheday82@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
Pillow = "^10.1.0"
telethon = "^1.32.1"
logging = "^0.4.9.6"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
